--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,11 @@
     <!-- カスタムCSS -->
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
+    <!-- グラフ等の描画 -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
+
     {% block extra_head %}{% endblock %}
 </head>
 <body>
