--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
                             <a class="nav-link text-white" href="{% url 'largecosts:list' %}">大型費用</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'core:summary' %}">集計データ</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" href="{% url 'accounts:info' %}">ユーザー情報</a>
                         </li>
                         <li class="nav-item">
