--- a/templates/home.html
+++ b/templates/home.html
@@ -63,7 +63,7 @@
     <div class="card-body">
         <h5 class="card-title mb-3">変動費の内訳</h5>
         {% if cost_item_totals %}
-            <div class="chart-wrapper">
+            <div class="chart-wrapper chart-wrapper--pie">
                 <canvas id="costPieChart"></canvas>
             </div>
         {% else %}
