--- a/templates/variablecosts/list.html
+++ b/templates/variablecosts/list.html
@@ -38,7 +38,7 @@
     <div class="card-body">
         <h5 class="card-title mb-3">内訳</h5>
         {% if cost_item_totals %}
-        <div class="chart-wrapper" style="position: relative; height: 300px;">
+        <div class="chart-wrapper chart-wrapper--pie" style="position: relative; height: 300px;">
             <canvas id="costPieChart"></canvas>
         </div>
         {% else %}
