--- a/templates/summary.html
+++ b/templates/summary.html
@@ -7,7 +7,7 @@
 <div class="card shadow-sm mb-4">
   <div class="card-body">
     <h5 class="card-title mb-3">生活費</h5>
-    <div class="chart-wrapper" style="position: relative; height: 340px;">
+    <div class="chart-wrapper chart-wrapper--bar" style="position: relative; height: 340px;">
       <canvas id="fixedVariableBar"></canvas>
     </div>
   </div>
@@ -19,7 +19,7 @@
 <div class="card shadow-sm mb-4">
   <div class="card-body">
     <h5 class="card-title mb-3">大型費用</h5>
-    <div class="chart-wrapper" style="position: relative; height: 300px;">
+    <div class="chart-wrapper chart-wrapper--bar" style="position: relative; height: 300px;">
       <canvas id="largeCostBar"></canvas>
     </div>
   </div>
